fix layout issues (maybe?)

--- a/src/app/shared/components/flashcard/flashcard-content-wizard/flashcard-content-wizard.component.css
+++ b/src/app/shared/components/flashcard/flashcard-content-wizard/flashcard-content-wizard.component.css
@@ -2,8 +2,7 @@
 .flashcard-option-container {
     border-radius: 20px;
     border: solid;
-    margin-left: 5px;
-    margin-right: 5px;
-    height: 15vh;
-    width: 15vh;
+    height: 100%;
+    width: 100%;
+    min-width: 60px;
 }
